# leverage-platform

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: ADR-001-tenant-isolation-product-side.md  ADR-002-sqlite-first-postgres-compatible.md  ADR-003-prompt-hash-template-input-hash-vars.md  ADR-004-artifacts-immutable-versioned-schema.md  ADR-005-workflows-not-crash-durable-v0.md  ADR-006-async-first-sqlite-to-thread.md  ADR-007-llm-parameters-typed-model.md  ADR-008-cost-as-decimal-never-float.md  ADR-009-workflowrun-status-enum.md  ADR-010-agent-context-first-arg.md  ADR-011-one-llm-call-per-agent.md
docs/product/: PRODUCT_MVP.md  PRODUCT_ROADMAP.md  PRODUCT_VISION.md
docs/source/: AGENTS.md  CLAUDE.md  CLAUDE_DESIGN_UPDATE_INSTRUCTIONS.md  DESIGN.md  HANDOFF-v0.3-bootstrap.md
proof/: __init__.py
proof/thirty_day_leverage_bet/: __init__.py  agents.py  eval_config.py  prompts.py  schemas.py  workflow.py
proof/thirty_day_leverage_bet/tests/: conftest.py  test_workflow_e2e.py
src/leverage_platform/: __init__.py  _hashing.py  cli.py
src/leverage_platform/eval/: __init__.py  judge.py  rules.py
src/leverage_platform/llm/: __init__.py  anthropic.py  mock.py  openai.py  provider.py
src/leverage_platform/observability/: __init__.py  (+1 more)
tests/: conftest.py  test_agent_decorator.py  test_cli.py  test_eval_rules.py  test_hashing.py  test_mock_provider.py  test_observability_cost.py  test_openai_provider.py  test_phase2_e2e.py  test_retry.py  test_smoke.py  test_sqlite_store.py  test_workflow.py
(+20 files in other folders)
