[project]
name = "leverage-platform"
version = "0.0.0"
description = "Reusable infrastructure for AI-native products."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.7",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
leverage-platform = "leverage_platform.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leverage_platform"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "proof"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests", "proof"]
addopts = "-ra -q"
pythonpath = ["src", "."]
asyncio_mode = "auto"
